--- a/assets/styles.css
+++ b/assets/styles.css
@@ -42,3 +42,9 @@ label {
     width: 300px;
     height: 300px;
 }
+
+@media only screen and (max-width: 700px) {
+    main {
+        flex-direction: column-reverse;
+    }
+}
