--- a/assets/styles.css
+++ b/assets/styles.css
@@ -33,6 +33,13 @@ label {
     border: 1px solid #ced4da;
 }
 
+#return {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 #pokemon {
     text-align: center;
     font-size: 2.5rem;
