--- a/assets/styles.css
+++ b/assets/styles.css
@@ -3,6 +3,7 @@ body {
     color: white;
     margin: 0;
     padding: 0;
+    font-family: sans-serif;
 }
 
 main {
@@ -22,6 +23,7 @@ header {
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 header h1 {
@@ -95,6 +97,7 @@ label {
 #pokemon {
     text-align: center;
     font-size: 2.5rem;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 #pokemonImg {
